# litgraph

./: .env.example  .gitignore  README.md  docker-compose.arcadedb.yml  docker-compose.yml  pyproject.toml
scripts/: backfill_authors.py  backfill_embeddings.py  cron_fetch_daily.sh  cron_fetch_daily_pubmed.sh  go_pathways.py  pubtator_mentions.py  reactome_pathways.py  runpod_embedding_server.py  smoke_test_embeddings.py
src/arxiv_graphdb/: cli.py  config.py
src/arxiv_graphdb/db/: arcadedb_http.py  neo4j_client.py  schema.py
src/arxiv_graphdb/search/: keyword.py  semantic.py
src/litgraph/: cli.py  config.py  models.py  run_log.py
src/litgraph/db/: arcadedb_http.py  neo4j_client.py  schema.py
src/litgraph/graph/: upsert.py
src/litgraph/ingest/: _pubmed_xml.py  arxiv_source.py  embeddings.py  kaggle_source.py  pipeline.py  pubmed_baseline_source.py  pubmed_source.py  semantic_scholar.py
src/litgraph/search/: citations.py  keyword.py  semantic.py  stats.py
src/plantbio/: models.py  pipeline.py  schema_ext.py  upsert.py
src/plantbio/ingest/: go.py  pubtator.py
src/spokebio/: models.py  pipeline.py  schema_ext.py  upsert.py
src/spokebio/ingest/: gene_crosswalk.py  go.py  pubtator.py  reactome.py
tests/: test_arxiv_source.py  test_embeddings.py  test_end_to_end.py  test_gene_crosswalk.py  test_go.py  test_kaggle_source.py  test_models.py  test_pubmed_baseline_source.py  test_pubmed_source.py  test_pubtator.py  test_reactome.py  test_semantic_scholar.py  test_upsert.py
