[project]
name = "litgraph"
version = "0.1.0"
description = "Multi-source academic paper ingestion and search backed by ArcadeDB (keyword + semantic + citation graph)"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.24",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.8",
    "httpx>=0.27",
    "tenacity>=9.0",
    "adapters>=1.0",
    "torch>=2.2",
    "arxiv>=4.0",
    "kaggle>=1.6",
    "python-dateutil>=2.9",
    "lxml>=5.3",
]

[project.scripts]
litgraph = "litgraph.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litgraph", "src/plantbio"]
